# unitree_g1_agent

./: .gitignore  CLAUDE.md  Makefile  README.md  cyclone_ds_lo.xml  flake.nix  pyproject.toml
src/asr_node/: README.md  package.xml  setup.cfg  setup.py
src/asr_node/asr_node/: __init__.py  asr_engine.py  audio_capture.py  buffer.py  config.py  node.py  vad.py
src/asr_node/config/: asr_node.yaml
src/asr_node/launch/: asr_node.launch.py
src/asr_node/tests/: test_asr_engine.py  test_audio_capture.py  test_buffer.py  test_config.py  test_node.py  test_vad.py
src/g1_agent_msgs/: CMakeLists.txt  package.xml
src/g1_agent_msgs/action/: ExecuteMotion.action
src/g1_agent_msgs/msg/: ActionIntent.msg  JointMotorCommand.msg  LocoIntent.msg  LowLevelCommandCandidate.msg  LowLevelControlLease.msg  MotionReferenceSegment.msg  RobotStateSummary.msg  SafetyDecision.msg  SafetyStatus.msg  TextOpTrackerStatus.msg  ValidatedActionCommand.msg  ValidatedLocoCommand.msg  VoiceEvent.msg
src/g1_agent_msgs/test/: test_interfaces.py
src/g1_bringup/: package.xml  setup.py
src/g1_bringup/g1_bringup/: __init__.py  backend.py
src/g1_bringup/launch/: g1_system.launch.py
src/g1_bringup/test/: test_motion_backend_launch.py
src/g1_interface/: README.md  package.xml  setup.cfg  setup.py
src/g1_interface/config/: g1_interface.yaml
src/g1_interface/g1_interface/: __init__.py  config.py  converters.py  internal_types.py  node.py  ros_converters.py  sport_api.py
src/g1_interface/launch/: g1_interface.launch.py
src/g1_interface/tests/: conftest.py  test_asr_bridge_node.py  test_config.py  test_converters.py  test_node_helpers.py  test_ros_converters.py  test_sport_api.py
src/g1_sim/: README.md  package.xml  setup.cfg  setup.py
src/g1_sim/config/: g1_sim.yaml
src/g1_sim/g1_sim/: __init__.py  config.py  model.py  node.py
src/g1_sim/launch/: g1_sim.launch.py
src/g1_sim/tests/: test_config.py  test_model.py  test_node.py
src/g1_system_tests/: CMakeLists.txt  package.xml
src/g1_system_tests/config/: textop_voice_bridge_test.yaml  voice_bridge_test.yaml
src/g1_system_tests/test/: test_textop_control_chain.py  test_typed_control_chain.py
src/g1_system_tests/test/support/: textop_generator_test_node  textop_tracker_test_node
src/low_level_guard/: CMakeLists.txt  package.xml
src/low_level_guard/config/: low_level_guard.yaml
src/low_level_guard/include/low_level_guard/: crc.hpp  guard_core.hpp
src/low_level_guard/launch/: low_level_guard.launch.py
src/low_level_guard/src/: crc.cpp  guard_core.cpp  node.cpp
src/low_level_guard/test/: test_guard_core.cpp
src/safety_control/: package.xml  setup.cfg  setup.py
src/safety_control/config/: safety_control.yaml
src/safety_control/launch/: safety_control.launch.py
src/safety_control/safety_control/: __init__.py  config.py  internal_types.py  node.py  ros_converters.py  state.py  validator.py
src/safety_control/tests/: conftest.py  test_config.py  test_node.py  test_state.py  test_validator.py
src/textop_backend/: package.xml  setup.cfg  setup.py
src/textop_backend/config/: textop_generator.yaml  textop_pretrained.yaml  textop_tracker.yaml
src/textop_backend/launch/: textop_backend.launch.py  textop_tracker.launch.py
src/textop_backend/tests/: test_direct_textop_inference.py  test_generator.py  test_generator_engine.py  test_generator_session.py  test_generator_stream_node.py  test_manifest.py  test_onnx_policy.py  test_prompt_stream.py  test_readiness.py  test_reference_buffer.py  test_runtime_lock.py  test_runtime_preflight.py  test_stop_gate.py  test_tracker_core.py  test_tracker_engine.py
src/textop_backend/textop_backend/: __init__.py  generator.py  generator_engine.py  generator_node.py  generator_session.py  manifest.py  onnx_policy.py  prompt_stream.py  readiness.py  reference.py  robotmdar_runtime.py  runtime_lock.py  runtime_preflight.py  stop_gate.py  tracker.py  tracker_engine.py  tracker_node.py
src/textop_backend/textop_backend/textop_model/: UPSTREAM.md  motion.py
src/textop_backend/textop_backend/textop_model/diffusion/: gaussian_diffusion.py  losses.py  nn.py  respace.py
src/textop_backend/textop_backend/textop_model/model/: mld_denoiser.py  mld_vae.py  modules.py
src/voice_bridge/: README.md  package.xml  setup.cfg  setup.py
src/voice_bridge/config/: voice_bridge.yaml
src/voice_bridge/launch/: voice_bridge.launch.py
src/voice_bridge/pi_extensions/: robot-tools.ts
src/voice_bridge/tests/: conftest.py  test_agent_rule_based.py  test_config.py  test_intent.py  test_node_helpers.py  test_pi_agent.py  test_pi_config.py  test_pi_integration.py  test_pi_transport.py  test_ros_converters.py
src/voice_bridge/voice_bridge/: __init__.py  agent.py  config.py  intent.py  internal_types.py  node.py  pi_agent.py  pi_config.py  pi_types.py  ros_converters.py
src/voice_bridge_debug/: package.xml  setup.cfg  setup.py
src/voice_bridge_debug/config/: debug_panel.yaml
src/voice_bridge_debug/frontend/: index.html  package-lock.json  package.json  vite.config.ts
src/voice_bridge_debug/frontend/src/: App.tsx
src/voice_bridge_debug/frontend/src/api/: http.ts  ws.ts
src/voice_bridge_debug/frontend/src/components/: AgentOutput.tsx  AsrInput.tsx  DecisionTimeline.tsx  RobotStatus.tsx
src/voice_bridge_debug/frontend/src/components/layout/: Header.tsx  Panel.tsx
src/voice_bridge_debug/frontend/src/state/: appState.tsx
src/voice_bridge_debug/frontend/src/types/: index.ts
src/voice_bridge_debug/launch/: debug_panel.launch.py
src/voice_bridge_debug/resource/: voice_bridge_debug
src/voice_bridge_debug/tests/: __init__.py  conftest.py  test_config.py  test_ros_converters.py  test_ros_node.py  test_routes.py  test_state.py  test_ws.py
src/voice_bridge_debug/voice_bridge_debug/: __init__.py  config.py  ros_converters.py  ros_node.py  routes.py  server.py  state.py  ws.py
src/voice_bridge_debug/voice_bridge_debug/frontend_dist/: index.html
src/voice_bridge_debug/voice_bridge_debug/frontend_dist/assets/: index-BbU6GPri.css  index-CAQ11Dw2.js  index-TiHPq2ut.css  index-fm6A9Bvg.js
(+47 files in other folders)
