[project]
name = "unitree-g1-agent-workspace"
version = "0.1.0"
requires-python = "==3.10.*"
dependencies = [
  "PyYAML==6.0.3",
]

[dependency-groups]
test = [
  "numpy==2.2.6",
  "pytest==8.3.5",
  "pytest-timeout==2.4.0",
]
debug = [
  "fastapi==0.115.12",
  "httpx==0.28.1",
  "starlette==0.46.2",
  "uvicorn[standard]==0.34.3",
]
lint = [
  "pyright==1.1.401",
  "ruff==0.11.13",
]
asr = [
  "faster-whisper==1.2.1",
  "torch==2.7.1",
]

[tool.uv]
package = false
default-groups = ["test", "debug", "lint"]

[tool.pytest.ini_options]
testpaths = ["src"]
addopts = "-ra --import-mode=importlib"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
include = [
  "src/asr_node/asr_node",
  "src/g1_interface/g1_interface",
  "src/safety_control/safety_control",
  "src/voice_bridge/voice_bridge",
  "src/voice_bridge_debug/voice_bridge_debug",
]
exclude = ["build", "install", "log", ".unitree"]
reportMissingImports = false
