<?xml version="1.0"?>
<package format="3">
  <name>asr_node</name>
  <version>0.1.0</version>
  <description>Custom ASR node for Unitree G1: UDP mic capture, VAD, faster-whisper recognition.</description>
  <maintainer email="2450804878@qq.com">unitree_g1_agent</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!-- faster-whisper and torch are Python runtime dependencies declared in setup.py. -->

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
