<?xml version="1.0"?>
<package format="3">
  <name>g1_sim</name>
  <version>0.1.0</version>
  <description>Simulator for Unitree G1 native ROS2 hardware topics and API services.</description>
  <maintainer email="2450804878@qq.com">unitree_g1_agent</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>unitree_hg</exec_depend>
  <exec_depend>unitree_api</exec_depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
