<?xml version="1.0"?>
<package format="3">
  <name>safety_control</name>
  <version>0.1.0</version>
  <description>Safety validation node for Unitree G1 voice and application motion intents.</description>
  <maintainer email="2450804878@qq.com">unitree_g1_agent</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>g1_agent_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
