<?xml version="1.0"?>
<package format="3">
  <name>voice_bridge_debug</name>
  <version>0.1.0</version>
  <description>Web debug panel for Unitree G1 voice bridge</description>
  <maintainer email="dev@example.local">unitree_g1_agent</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
